--- a/components/navMenu/navMenu.scss
+++ b/components/navMenu/navMenu.scss
@@ -96,7 +96,7 @@
             }
         }
         .hp-menu-sub{
-            display: none;
+            display: none!important;
         }
     }
     &.primary {
