图表控件开发 新增柱状图

--- a/components/adminSystem/adminSystem.scss
+++ b/components/adminSystem/adminSystem.scss
@@ -125,7 +125,7 @@
         transition:  all ease .3s;
         &.full {
             left: 45px;
-            width: 100%;
+            width: calc(100% - 45px);
         }
         .hp-topbar{
             background: #fff;
