--- a/components/panel/panel.scss
+++ b/components/panel/panel.scss
@@ -8,6 +8,8 @@
         background: #fafafa;
         font-weight: 500;
         border-bottom: 1px solid #e5e5e5;
+        color: #888;
+        font-size: 13px;
         .hp-panel_toolbar {
             float: right;
             padding: 0;
