--- a/components/panel/panel.scss
+++ b/components/panel/panel.scss
@@ -2,6 +2,7 @@
     border: 1px solid #e5e5e5;
     box-shadow: 0 0 4px rgba(0,0,0,.1);
     width: 100%;
+    background: #fff;
     &_title {
         line-height: 36px;
         padding: 0 14px;
