新增表单控件 优化panel组件

--- a/components/adminSystem/adminSystem.scss
+++ b/components/adminSystem/adminSystem.scss
@@ -166,6 +166,7 @@
         color: #fff;
     }
     > .hp-textbox{
+        display: none;
         list-style: none;
         position: relative;
         float: right;
@@ -186,6 +187,11 @@
             outline: 0;
             border: none;
             box-shadow: none;
+        }
+    }
+    &.active {
+        > .hp-textbox {
+            display: inherit;
         }
     }
     &.primary {
