--- a/components/textBox/textBox.scss
+++ b/components/textBox/textBox.scss
@@ -2,7 +2,9 @@
     list-style: none;
     position: relative;
     display: inline-block;
+    box-sizing: border-box;
     padding: 4px 11px;
+    min-width: 160px;
     width: 100%;
     height: 32px;
     font-size: 14px;
@@ -14,7 +16,7 @@
     border-radius: 4px;
     -webkit-transition: all .3s;
     transition: all .3s;
-    &:focus {
+    &:hover, &:focus {
         outline: 0;
         -webkit-box-shadow: 0 0 0 2px rgba(24,144,255,.2);
         box-shadow: 0 0 0 2px rgba(24,144,255,.2);
