--- a/components/form/form.scss
+++ b/components/form/form.scss
@@ -3,15 +3,21 @@
         max-width: 100%;
         border-spacing: 0;
         border-collapse: collapse;
+        empty-cells:show;
         tr {
             & > th {
                 text-align: right;
                 padding-right: 1rem;
                 padding-bottom: 1rem;
-                font-weight: 400;
+                font-weight: normal;
                 color: rgba(0,0,0,.85);
                 white-space: nowrap;
                 font-family: Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
+                > label {
+                    display: inline-block;
+                    min-width: 84px;
+                    padding: 0 8px;
+                }
             }
             & > td {
                 padding-bottom: 1rem;
