--- a/components/panel/panel.scss
+++ b/components/panel/panel.scss
@@ -2,6 +2,7 @@
     border: 1px solid #e5e5e5;
     width: 100%;
     background: #fff;
+    box-sizing: border-box;
     &_title {
         line-height: 36px;
         padding: 0 14px;
