--- a/components/textBox/textBox.scss
+++ b/components/textBox/textBox.scss
@@ -18,8 +18,13 @@
     transition: all .3s;
     &:hover, &:focus {
         outline: 0;
-        -webkit-box-shadow: 0 0 0 2px rgba(24,144,255,.2);
-        box-shadow: 0 0 0 2px rgba(24,144,255,.2);
+        // -webkit-box-shadow: 0 0 0 2px rgba(24,144,255,.2);
+        // box-shadow: 0 0 0 2px rgba(24,144,255,.2);
         border-color: #40a9ff;
     }
 }
+// input::-webkit-input-placeholder, input::-moz-placeholder, input:-moz-placeholder,
+// input:-ms-input-placeholder, textarea::-webkit-input-placeholder, textarea::-moz-placeholder, textarea:-moz-placeholder,
+// textarea:-ms-input-placeholder  {
+//     color: red;
+// }
