新增表单校验

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -34,6 +34,10 @@ body {
 .float-right{
     float: right;
 }
+.hp-formlayout-required{
+    color: #d63a29;
+    font-weight: bold;
+}
 .hp-row{
     .hp-col {
         display: inline-block;
