新增消息提示窗口

--- a/components/button/button.scss
+++ b/components/button/button.scss
@@ -8,6 +8,7 @@ $default: #d9d9d9;
     -moz-osx-font-smoothing: grayscale;
     padding: 0 1rem;
     border: 1px solid $default;
+    background: #fff;
     border-radius: 4px;
     font-size: 14px;
     display: inline-block;
