--- a/components/adminSystem/adminSystem.scss
+++ b/components/adminSystem/adminSystem.scss
@@ -1,3 +1,15 @@
+@import "./../font/iconfont.scss";
+// 主题色
+$color-warning: #ffe58f;
+$color-error: #d63a29;
+$color-success: #48c9a9;
+$color-primary: #4a89dc;
+$color-warning: #ffe58f;
+$color-error: #d63a29;
+$color-grey: #30363e;
+$color-dark: #001529;
+$color-light-blue: #66b1ff;
+$input-focus-color: #40a9ff;
 .hp-adminsystem {
     &_header {
         height: 60px;
@@ -195,35 +207,35 @@
         }
     }
     &.primary {
-        background: #4a89dc;
+        background: $color-primary;
         &.active {
             background: #fff;
             > .iconfont.icon-search,  > .hp-textbox {
-                color: #4a89dc;
+                color: $color-primary;
             }
         }
     }
     &.system {
-        background: #48c9a9;
+        background: $color-success;
         &.active {
             > .iconfont.icon-search,  > .hp-textbox {
-                color: #48c9a9;
+                color: $color-success;
             }
         }
     }
     &.grey {
-        background: #30363e;
+        background: $color-grey;
         &.active {
             > .iconfont.icon-search,  > .hp-textbox {
-                color: #30363e;
+                color: $color-grey;
             }
         }
     }
     &.dark {
-        background: #001529;
+        background: $color-dark;
         &.active {
             > .iconfont.icon-search,  > .hp-textbox {
-                color: #001529;
+                color: $color-dark;
             }
         }
     }
@@ -232,4 +244,17 @@
         width: 400px;
         border-radius: 16px;
     }
+}
+
+.primary{
+    color: $color-primary;
+}
+.success{
+    color: $color-success;
+}
+.warning{
+    color: $color-warning;
+}
+.error{
+    color: $color-error;
 }
