新增单选框组、多选框组

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -33,6 +33,9 @@ body {
 .float-right{
     float: right;
 }
+.display-flex {
+    display: flex;
+}
 .hp-formlayout-required{
     color: #d63a29;
     font-weight: bold;
