新增文本域、下拉列表

--- a/components/form/form.scss
+++ b/components/form/form.scss
@@ -23,6 +23,11 @@
                 padding-bottom: 1rem;
                 min-width: 8rem;
             }
+            & > th, & > td {
+                .hp-textbox {
+                    width: 100%;
+                }
+            }
         }
     }
 }
