--- a/components/textArea/textArea.scss
+++ b/components/textArea/textArea.scss
@@ -1,5 +1,5 @@
-@import "adminSystem/adminSystem.scss";
-.hp-textbox {
+@import "textBox/textBox.scss";
+textarea.hp-textbox{
     font-size: 1rem;
     list-style: none;
     position: relative;
@@ -7,8 +7,8 @@
     box-sizing: border-box;
     padding: 4px 11px;
     max-width: 100%;
-    width: 12rem;
-    height: 32px;
+    width: 20rem;
+    min-height: 6rem;
     font-size: 14px;
     line-height: 1.5;
     color: rgba(0,0,0,.65);
@@ -22,4 +22,5 @@
         outline: 0;
         border-color: #40a9ff;
     }
+    
 }
