优化登陆功能

--- a/components/login/login.scss
+++ b/components/login/login.scss
@@ -11,7 +11,7 @@ $bg-color-sub: rgba(53,123,216,.6);
 //     overflow: hidden;
 // }
 .hp-login.bg {
-    font-weight: lighter;
+    // font-weight: lighter;
     height: 100%;
     background-image: url(./../../assets/static/login_bg.png);
     background-size: cover;
