--- a/components/select/select.scss
+++ b/components/select/select.scss
@@ -1,3 +1,57 @@
+@import "adminSystem/adminSystem.scss";
 .hp-select {
-
+    position: relative;
+    display: inline-block;
+    > .hp-textbox {
+        padding-right: 2rem;
+    }
+    > button {
+        position: absolute;
+        right: 0;
+        height: 100%;
+        border: 1px solid #ddd;
+        color: #666;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        outline: none;
+        transition: all ease .3s;
+        cursor: pointer;
+        &:active {
+            box-shadow: 0 0 1px rgba(0,0,0,.2)
+        }
+    }
+    .hp-listbox {
+        position: absolute;
+        z-index: 999;
+        padding: 0;
+        list-style: none;
+        margin: 0;
+        width: 100%;
+        background: #fff;
+        box-shadow: 0 0 2px rgba(0,0,0,.2);
+        > li {
+            > a {
+                color: #666;
+                display: block;
+                padding: 0 1rem;
+                line-height: 30px;
+                text-decoration: none;
+                cursor: pointer;
+                transition: all ease .3s;
+            }
+            &:hover {
+                > a {
+                    background: $color-primary;
+                    color: #fff;
+                }
+            }
+        }
+        &-collapsed {
+            display: none;
+        }
+        &-collapsable {
+            display: block;
+        }
+        display: none;
+    }
 }
