新增列表组件

--- a/components/gridLayout/gridLayout.scss
+++ b/components/gridLayout/gridLayout.scss
@@ -1,5 +1,6 @@
 $name: "hp-gridlayout";
 .#{$name} {
+    display: flex;
     .hp-layout {
         display: inline-block;
         @for $num from 1 through 12 {
