--- a/components/dataGridView/dataGridView.scss
+++ b/components/dataGridView/dataGridView.scss
@@ -3,6 +3,7 @@
     border-radius: 4px;
     border: 1px solid #e8e8e8;
     padding: 8px;
+    background: #fff;
     > table {
         border-collapse: collapse;
         border: none;
