--- a/pages/expertList.scss
+++ b/pages/expertList.scss
@@ -1,3 +1,7 @@
 .hp-expertlist {
     padding: 20px;
+    .hp-datagridview {
+        display: inline-block;
+        width: calc(100% - 16px);
+    }
 }
