--- a/pages/expertPage.scss
+++ b/pages/expertPage.scss
@@ -1,3 +1,22 @@
 .hp-expertpage {
     padding: 20px;
+    .hp-panel {
+        &_content {
+            overflow: auto;
+            .hp-datagridview {
+                tr {
+                    td {
+                        padding: 8px;
+                        min-width: 100px;
+                        max-width: 400px;
+                        white-space: initial;
+                        > div {
+                            white-space: nowrap;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    
 }
