--- a/components/notification/notification.scss
+++ b/components/notification/notification.scss
@@ -23,6 +23,7 @@
         max-width: 400px;
         max-height: 280px;
         overflow: auto;
+        text-overflow: ellipsis;
         color: rgba(0, 0, 0, 0.65);
     }
     &-flag{
