--- a/components/form/form.scss
+++ b/components/form/form.scss
@@ -6,6 +6,7 @@
         empty-cells:show;
         tr {
             & > th {
+                vertical-align: top;
                 text-align: right;
                 padding-right: 1rem;
                 padding-bottom: 1rem;
