新增时间选择器

--- a/components/textBox/textBox.scss
+++ b/components/textBox/textBox.scss
@@ -22,4 +22,9 @@
     &:hover, &:focus {
         border-color: #40a9ff;
     }
+    &:-webkit-autofill {
+        background-color: #fff;
+        background-image: none;
+        box-shadow: 0 0 0px 1000px white inset;
+    }
 }
